[gd_scene load_steps=3 format=3 uid="uid://dr1k27ij8lu5c"]

[ext_resource type="Script" uid="uid://bybjeruc3gav1" path="res://src/ui/title_button.gd" id="1_kksgq"]
[ext_resource type="Texture2D" uid="uid://dgll5eltru72y" path="res://src/graphics/title/cursor.png" id="2_v8ahg"]

[node name="TitleButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 32.0
script = ExtResource("1_kksgq")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Button"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -13.0
offset_top = 11.0
offset_right = -6.0
offset_bottom = 23.0
texture = ExtResource("2_v8ahg")
expand_mode = 1
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
